ajustes e inclusao das fontes

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	
-	<link rel="icon" type="image/x-icon" href="images/ico.ico" />
-	<link rel="icon" type="image/png" href="images/ico.png" />
+	<link rel="icon" type="img/icon" href="images/favicon.ico" />
 
 	<title>Test - Tenfold</title>
 
@@ -14,7 +13,24 @@
 </head>
 <body>
 
-<h1>Bruno Guazina</h1>
+<div class="btn-popUp">
+	<img src="images/icon-logo.svg">
+</div>
+
+<div class="popUp">
+
+	<div class="top">
+		<span class="logo"><img src="images/logo.svg"></span>
+		<span class="close"></span>
+	</div>
+
+	<div class="infoCall">
+		<div class="callsHistory">
+			<span class="icon"><img src="images/return.svg"></span>
+		</div>
+		<div class="call"></div>
+	</div>
+</div>
 
 <!-- build:js -->
 <script src="scripts/jquery.js"></script>
