inicio da formatacao

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div class="btn-popUp">
+<div class="btnPopUp">
 	<img src="images/icon-logo.svg">
 </div>
 
@@ -24,12 +24,62 @@
 		<span class="close"></span>
 	</div>
 
-	<div class="infoCall">
+	<div class="statusCall">
+		
 		<div class="callsHistory">
-			<span class="icon"><img src="images/return.svg"></span>
+			<i class="icon">
+				<img src="images/return.svg">
+			</i>
+			<span>calls history</span>
 		</div>
-		<div class="call"></div>
+
+		<div class="callInfo">
+			<div class="status">
+				<span>in call</span>
+				<span>outbound call</span>
+			</div>
+			<div class="timer">
+				00:03:57
+			</div>
+			<i class="icon">
+				<img src="images/phone.svg">
+			</i>
+		</div>
+
+		<div class="profile">
+			<div class="photo">
+					<img src="images/user.png">
+			</div>
+			<div class="content">
+				<div class="name">
+					<i class="onLine"></i>
+					<span>Shirley Thomas</span>
+				</div>
+				<div class="phoneNumber">+1 (234) 123 123</div>
+				<div class="info">
+					<span>Marketing Executive, Inform Group Pty Ltd, Philippines, Cosmetics</span>
+					<a href="">+ Add Field</a>
+				</div>
+			</div>
+		</div>
 	</div>
+
+	<div class="history">
+		<div class="phone">
+			<img src="images/phoneBig.svg">
+		</div>
+		<div class="log">logs</div>
+		<div class="calls">
+			<div></div>
+		</div>
+	</div>
+
+		<div class="notes">
+			<span class="title">Show more registers from Shirley</span>
+			<div class="content">Budget is finally available!  Needs to pull in some other decision makers.  Followup next week. CC sales manager @robert so he can join.</div>
+			<span class="btnSave">Save</span>
+		</div>
+
 </div>
 
 <!-- build:js -->
