inicio dos ajustes de formatacao

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 			<i class="icon">
 				<img src="images/return.svg">
 			</i>
-			<span>calls history</span>
+			<div>calls history</div>
 		</div>
 
 		<div class="callInfo">
@@ -45,21 +45,21 @@
 				<img src="images/phone.svg">
 			</i>
 		</div>
+	</div>
 
-		<div class="profile">
-			<div class="photo">
-					<img src="images/user.png">
+	<div class="profile">
+		<div class="photo">
+			<img src="images/user.png">
+		</div>
+		<div class="content">
+			<div class="name">
+				<i class="onLine"></i>
+				Shirley Thomas
 			</div>
-			<div class="content">
-				<div class="name">
-					<i class="onLine"></i>
-					<span>Shirley Thomas</span>
-				</div>
-				<div class="phoneNumber">+1 (234) 123 123</div>
-				<div class="info">
-					<span>Marketing Executive, Inform Group Pty Ltd, Philippines, Cosmetics</span>
-					<a href="">+ Add Field</a>
-				</div>
+			<div class="phoneNumber">+1 (234) 123 123</div>
+			<div class="info">
+				Marketing Executive, Inform Group Pty Ltd, Philippines, Cosmetics
+				<div><a href="">Facebook</a>,<a href="">Twitter</a>,<a href="">Linkedin</a>,<a href="">+ Add Field</a></div>
 			</div>
 		</div>
 	</div>
@@ -68,9 +68,24 @@
 		<div class="phone">
 			<img src="images/phoneBig.svg">
 		</div>
-		<div class="log">logs</div>
+		<div class="logs">
+			<div id="001" class="log">
+				<div class="title">outbound call</div>
+				<div class="content">
+					<span class="">
+					<img src="images/clock.svg">
+				</span>4 days ago</div>
+			</div>
+			<div id="002" class="log">
+				<div class="title">outbound call</div>
+				<div class="content">
+					<span class="">
+					<img src="images/clock.svg">
+				</span>5 days ago</div>
+			</div>
+		</div>
 		<div class="calls">
-			<div></div>
+			<div class="select">calls history</div>
 		</div>
 	</div>
 
