--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,9 @@
 
 		<div class="notes">
 			<span class="title">Show more registers from Shirley</span>
-			<div class="content">Budget is finally available!  Needs to pull in some other decision makers.  Followup next week. CC sales manager @robert so he can join.</div>
+			<div class="content">Budget is finally available!  Needs to pull in some other decision makers.  Followup next week. CC sales manager @robert so he can join.
 			<span class="btnSave">Save</span>
+			</div>
 		</div>
 
 </div>
