--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
 </head>
 <body>
 
-<div class="btnPopUp">
-	<img src="images/icon-logo.svg">
-</div>
+<div class="btnPopUp"></div>
 
 <div class="popUp">
 
@@ -27,23 +25,19 @@
 	<div class="statusCall">
 		
 		<div class="callsHistory">
-			<i class="icon">
-				<img src="images/return.svg">
-			</i>
+			<i class="icon"></i>
 			<div>calls history</div>
 		</div>
 
 		<div class="callInfo">
 			<div class="status">
-				<span>in call</span>
-				<span>outbound call</span>
+				<span class="on">in call</span>
+				<span class="off">outbound call</span>
 			</div>
 			<div class="timer">
 				00:03:57
 			</div>
-			<i class="icon">
-				<img src="images/phone.svg">
-			</i>
+			<i class="icon"></i>
 		</div>
 	</div>
 
@@ -65,9 +59,7 @@
 	</div>
 
 	<div class="history">
-		<div class="phone">
-			<img src="images/phoneBig.svg">
-		</div>
+		<div class="phone"></div>
 		<div class="logs">
 			<div id="001" class="log">
 				<div class="title">outbound call</div>
@@ -75,13 +67,6 @@
 					<span class="">
 					<img src="images/clock.svg">
 				</span>4 days ago</div>
-			</div>
-			<div id="002" class="log">
-				<div class="title">outbound call</div>
-				<div class="content">
-					<span class="">
-					<img src="images/clock.svg">
-				</span>5 days ago</div>
 			</div>
 		</div>
 		<div class="calls">
