--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,8 @@
 		</div>
 		<div class="calls">
 			<div class="select">calls history</div>
+			<div class="follow">1 Follow Up</div>
+			<div class="note">3 Notes</div>
 		</div>
 	</div>
 
